@@ -19,7 +19,7 @@ LINKER		:= gcc
 
 # general compiler flags
 WFLAGS		:= -Wall -Wextra -Werror=float-equal -Wuninitialized \
-				-Wunused-variable -Wdouble-promotion -pedantic \
+				-Wdouble-promotion -pedantic \
 				-Wmissing-prototypes -Wmissing-declarations -Werror=undef
 CFLAGS		:= -std=c99 -g -fPIC -I $(INCLUDEDIR)
 OPT_FLAGS	:= -O3 -ffast-math -ftree-vectorize
